test/classes/delete-free/undecorated-generic/cannot-default-init-cq.good
cannot-default-init-cq.chpl:3: In function 'test':
cannot-default-init-cq.chpl:4: error: Cannot default-initialize a variable with generic type
cannot-default-init-cq.chpl:4: note: 'bb' has generic type 'C?'
cannot-default-init-cq.chpl:4: note: 'C?' indicates a nilable class with any management
cannot-default-init-cq.chpl:4: note: consider adding a management decorator such as 'owned', 'shared', 'borrowed', or 'unmanaged'
